APIs/googleapis.com/blogger/v2/java-client/README.md
# openapi-java-client

Blogger API
- API version: v2
  - Build date: 2024-10-12T11:39:04.242954-04:00[America/New_York]
  - Generator version: 7.9.0

The Blogger API provides access to posts, comments and pages of a Blogger blog.

  For more information, please visit [https://google.com](https://google.com)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>v2</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:v2"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-v2.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.auth.*;
import org.openapitools.client.model.*;
import org.openapitools.client.api.BlogsApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://blogger.googleapis.com");
    
    // Configure OAuth2 access token for authorization: Oauth2c
    OAuth Oauth2c = (OAuth) defaultClient.getAuthentication("Oauth2c");
    Oauth2c.setAccessToken("YOUR ACCESS TOKEN");

    // Configure OAuth2 access token for authorization: Oauth2
    OAuth Oauth2 = (OAuth) defaultClient.getAuthentication("Oauth2");
    Oauth2.setAccessToken("YOUR ACCESS TOKEN");

    BlogsApi apiInstance = new BlogsApi(defaultClient);
    String blogId = "blogId_example"; // String | 
    String $xgafv = "1"; // String | V1 error format.
    String accessToken = "accessToken_example"; // String | OAuth access token.
    String alt = "json"; // String | Data format for response.
    String paramCallback = "paramCallback_example"; // String | JSONP
    String fields = "fields_example"; // String | Selector specifying which fields to include in a partial response.
    String key = "key_example"; // String | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
    String oauthToken = "oauthToken_example"; // String | OAuth 2.0 token for the current user.
    Boolean prettyPrint = true; // Boolean | Returns response with indentations and line breaks.
    String quotaUser = "quotaUser_example"; // String | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
    String uploadProtocol = "uploadProtocol_example"; // String | Upload protocol for media (e.g. \"raw\", \"multipart\").
    String uploadType = "uploadType_example"; // String | Legacy upload protocol for media (e.g. \"media\", \"multipart\").
    try {
      Blog result = apiInstance.bloggerBlogsGet(blogId, $xgafv, accessToken, alt, paramCallback, fields, key, oauthToken, prettyPrint, quotaUser, uploadProtocol, uploadType);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling BlogsApi#bloggerBlogsGet");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://blogger.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*BlogsApi* | [**bloggerBlogsGet**](docs/BlogsApi.md#bloggerBlogsGet) | **GET** /v2/blogs/{blogId} | 
*BlogsApi* | [**bloggerBlogsList**](docs/BlogsApi.md#bloggerBlogsList) | **GET** /v2/users/{userId}/blogs | 
*CommentsApi* | [**bloggerCommentsGet**](docs/CommentsApi.md#bloggerCommentsGet) | **GET** /v2/blogs/{blogId}/posts/{postId}/comments/{commentId} | 
*CommentsApi* | [**bloggerCommentsList**](docs/CommentsApi.md#bloggerCommentsList) | **GET** /v2/blogs/{blogId}/posts/{postId}/comments | 
*PagesApi* | [**bloggerPagesGet**](docs/PagesApi.md#bloggerPagesGet) | **GET** /v2/blogs/{blogId}/pages/{pageId} | 
*PagesApi* | [**bloggerPagesList**](docs/PagesApi.md#bloggerPagesList) | **GET** /v2/blogs/{blogId}/pages | 
*PostsApi* | [**bloggerPostsGet**](docs/PostsApi.md#bloggerPostsGet) | **GET** /v2/blogs/{blogId}/posts/{postId} | 
*PostsApi* | [**bloggerPostsList**](docs/PostsApi.md#bloggerPostsList) | **GET** /v2/blogs/{blogId}/posts | 
*UsersApi* | [**bloggerUsersGet**](docs/UsersApi.md#bloggerUsersGet) | **GET** /v2/users/{userId} | 


## Documentation for Models

 - [Blog](docs/Blog.md)
 - [BlogList](docs/BlogList.md)
 - [BlogLocale](docs/BlogLocale.md)
 - [BlogPages](docs/BlogPages.md)
 - [BlogPerUserInfo](docs/BlogPerUserInfo.md)
 - [BlogPosts](docs/BlogPosts.md)
 - [BlogUserInfo](docs/BlogUserInfo.md)
 - [Comment](docs/Comment.md)
 - [CommentAuthor](docs/CommentAuthor.md)
 - [CommentAuthorImage](docs/CommentAuthorImage.md)
 - [CommentBlog](docs/CommentBlog.md)
 - [CommentInReplyTo](docs/CommentInReplyTo.md)
 - [CommentList](docs/CommentList.md)
 - [CommentPost](docs/CommentPost.md)
 - [Page](docs/Page.md)
 - [PageAuthor](docs/PageAuthor.md)
 - [PageBlog](docs/PageBlog.md)
 - [PageList](docs/PageList.md)
 - [Post](docs/Post.md)
 - [PostAuthor](docs/PostAuthor.md)
 - [PostBlog](docs/PostBlog.md)
 - [PostImagesInner](docs/PostImagesInner.md)
 - [PostList](docs/PostList.md)
 - [PostLocation](docs/PostLocation.md)
 - [PostReplies](docs/PostReplies.md)
 - [User](docs/User.md)
 - [UserBlogs](docs/UserBlogs.md)
 - [UserLocale](docs/UserLocale.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/blogger: Manage your Blogger account

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/blogger: Manage your Blogger account


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



