APIs/googleapis.com/blogger/v3/java-client/README.md
# openapi-java-client

Blogger API
- API version: v3
  - Build date: 2024-10-12T11:39:35.701418-04:00[America/New_York]
  - Generator version: 7.9.0

The Blogger API provides access to posts, comments and pages of a Blogger blog.

  For more information, please visit [https://google.com](https://google.com)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>v3</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:v3"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-v3.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.auth.*;
import org.openapitools.client.model.*;
import org.openapitools.client.api.BlogUserInfosApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://blogger.googleapis.com");
    
    // Configure OAuth2 access token for authorization: Oauth2c
    OAuth Oauth2c = (OAuth) defaultClient.getAuthentication("Oauth2c");
    Oauth2c.setAccessToken("YOUR ACCESS TOKEN");

    // Configure OAuth2 access token for authorization: Oauth2
    OAuth Oauth2 = (OAuth) defaultClient.getAuthentication("Oauth2");
    Oauth2.setAccessToken("YOUR ACCESS TOKEN");

    BlogUserInfosApi apiInstance = new BlogUserInfosApi(defaultClient);
    String userId = "userId_example"; // String | 
    String blogId = "blogId_example"; // String | 
    String $xgafv = "1"; // String | V1 error format.
    String accessToken = "accessToken_example"; // String | OAuth access token.
    String alt = "json"; // String | Data format for response.
    String paramCallback = "paramCallback_example"; // String | JSONP
    String fields = "fields_example"; // String | Selector specifying which fields to include in a partial response.
    String key = "key_example"; // String | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
    String oauthToken = "oauthToken_example"; // String | OAuth 2.0 token for the current user.
    Boolean prettyPrint = true; // Boolean | Returns response with indentations and line breaks.
    String quotaUser = "quotaUser_example"; // String | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
    String uploadProtocol = "uploadProtocol_example"; // String | Upload protocol for media (e.g. \"raw\", \"multipart\").
    String uploadType = "uploadType_example"; // String | Legacy upload protocol for media (e.g. \"media\", \"multipart\").
    Integer maxPosts = 56; // Integer | 
    try {
      BlogUserInfo result = apiInstance.bloggerBlogUserInfosGet(userId, blogId, $xgafv, accessToken, alt, paramCallback, fields, key, oauthToken, prettyPrint, quotaUser, uploadProtocol, uploadType, maxPosts);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling BlogUserInfosApi#bloggerBlogUserInfosGet");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://blogger.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*BlogUserInfosApi* | [**bloggerBlogUserInfosGet**](docs/BlogUserInfosApi.md#bloggerBlogUserInfosGet) | **GET** /v3/users/{userId}/blogs/{blogId} | 
*BlogsApi* | [**bloggerBlogsGet**](docs/BlogsApi.md#bloggerBlogsGet) | **GET** /v3/blogs/{blogId} | 
*BlogsApi* | [**bloggerBlogsGetByUrl**](docs/BlogsApi.md#bloggerBlogsGetByUrl) | **GET** /v3/blogs/byurl | 
*BlogsApi* | [**bloggerBlogsListByUser**](docs/BlogsApi.md#bloggerBlogsListByUser) | **GET** /v3/users/{userId}/blogs | 
*CommentsApi* | [**bloggerCommentsApprove**](docs/CommentsApi.md#bloggerCommentsApprove) | **POST** /v3/blogs/{blogId}/posts/{postId}/comments/{commentId}/approve | 
*CommentsApi* | [**bloggerCommentsDelete**](docs/CommentsApi.md#bloggerCommentsDelete) | **DELETE** /v3/blogs/{blogId}/posts/{postId}/comments/{commentId} | 
*CommentsApi* | [**bloggerCommentsGet**](docs/CommentsApi.md#bloggerCommentsGet) | **GET** /v3/blogs/{blogId}/posts/{postId}/comments/{commentId} | 
*CommentsApi* | [**bloggerCommentsList**](docs/CommentsApi.md#bloggerCommentsList) | **GET** /v3/blogs/{blogId}/posts/{postId}/comments | 
*CommentsApi* | [**bloggerCommentsListByBlog**](docs/CommentsApi.md#bloggerCommentsListByBlog) | **GET** /v3/blogs/{blogId}/comments | 
*CommentsApi* | [**bloggerCommentsMarkAsSpam**](docs/CommentsApi.md#bloggerCommentsMarkAsSpam) | **POST** /v3/blogs/{blogId}/posts/{postId}/comments/{commentId}/spam | 
*CommentsApi* | [**bloggerCommentsRemoveContent**](docs/CommentsApi.md#bloggerCommentsRemoveContent) | **POST** /v3/blogs/{blogId}/posts/{postId}/comments/{commentId}/removecontent | 
*PageViewsApi* | [**bloggerPageViewsGet**](docs/PageViewsApi.md#bloggerPageViewsGet) | **GET** /v3/blogs/{blogId}/pageviews | 
*PagesApi* | [**bloggerPagesDelete**](docs/PagesApi.md#bloggerPagesDelete) | **DELETE** /v3/blogs/{blogId}/pages/{pageId} | 
*PagesApi* | [**bloggerPagesGet**](docs/PagesApi.md#bloggerPagesGet) | **GET** /v3/blogs/{blogId}/pages/{pageId} | 
*PagesApi* | [**bloggerPagesInsert**](docs/PagesApi.md#bloggerPagesInsert) | **POST** /v3/blogs/{blogId}/pages | 
*PagesApi* | [**bloggerPagesList**](docs/PagesApi.md#bloggerPagesList) | **GET** /v3/blogs/{blogId}/pages | 
*PagesApi* | [**bloggerPagesPatch**](docs/PagesApi.md#bloggerPagesPatch) | **PATCH** /v3/blogs/{blogId}/pages/{pageId} | 
*PagesApi* | [**bloggerPagesPublish**](docs/PagesApi.md#bloggerPagesPublish) | **POST** /v3/blogs/{blogId}/pages/{pageId}/publish | 
*PagesApi* | [**bloggerPagesRevert**](docs/PagesApi.md#bloggerPagesRevert) | **POST** /v3/blogs/{blogId}/pages/{pageId}/revert | 
*PagesApi* | [**bloggerPagesUpdate**](docs/PagesApi.md#bloggerPagesUpdate) | **PUT** /v3/blogs/{blogId}/pages/{pageId} | 
*PostUserInfosApi* | [**bloggerPostUserInfosGet**](docs/PostUserInfosApi.md#bloggerPostUserInfosGet) | **GET** /v3/users/{userId}/blogs/{blogId}/posts/{postId} | 
*PostUserInfosApi* | [**bloggerPostUserInfosList**](docs/PostUserInfosApi.md#bloggerPostUserInfosList) | **GET** /v3/users/{userId}/blogs/{blogId}/posts | 
*PostsApi* | [**bloggerPostsDelete**](docs/PostsApi.md#bloggerPostsDelete) | **DELETE** /v3/blogs/{blogId}/posts/{postId} | 
*PostsApi* | [**bloggerPostsGet**](docs/PostsApi.md#bloggerPostsGet) | **GET** /v3/blogs/{blogId}/posts/{postId} | 
*PostsApi* | [**bloggerPostsGetByPath**](docs/PostsApi.md#bloggerPostsGetByPath) | **GET** /v3/blogs/{blogId}/posts/bypath | 
*PostsApi* | [**bloggerPostsInsert**](docs/PostsApi.md#bloggerPostsInsert) | **POST** /v3/blogs/{blogId}/posts | 
*PostsApi* | [**bloggerPostsList**](docs/PostsApi.md#bloggerPostsList) | **GET** /v3/blogs/{blogId}/posts | 
*PostsApi* | [**bloggerPostsPatch**](docs/PostsApi.md#bloggerPostsPatch) | **PATCH** /v3/blogs/{blogId}/posts/{postId} | 
*PostsApi* | [**bloggerPostsPublish**](docs/PostsApi.md#bloggerPostsPublish) | **POST** /v3/blogs/{blogId}/posts/{postId}/publish | 
*PostsApi* | [**bloggerPostsRevert**](docs/PostsApi.md#bloggerPostsRevert) | **POST** /v3/blogs/{blogId}/posts/{postId}/revert | 
*PostsApi* | [**bloggerPostsSearch**](docs/PostsApi.md#bloggerPostsSearch) | **GET** /v3/blogs/{blogId}/posts/search | 
*PostsApi* | [**bloggerPostsUpdate**](docs/PostsApi.md#bloggerPostsUpdate) | **PUT** /v3/blogs/{blogId}/posts/{postId} | 
*UsersApi* | [**bloggerUsersGet**](docs/UsersApi.md#bloggerUsersGet) | **GET** /v3/users/{userId} | 


## Documentation for Models

 - [Blog](docs/Blog.md)
 - [BlogList](docs/BlogList.md)
 - [BlogLocale](docs/BlogLocale.md)
 - [BlogPages](docs/BlogPages.md)
 - [BlogPerUserInfo](docs/BlogPerUserInfo.md)
 - [BlogPosts](docs/BlogPosts.md)
 - [BlogUserInfo](docs/BlogUserInfo.md)
 - [Comment](docs/Comment.md)
 - [CommentAuthor](docs/CommentAuthor.md)
 - [CommentAuthorImage](docs/CommentAuthorImage.md)
 - [CommentBlog](docs/CommentBlog.md)
 - [CommentInReplyTo](docs/CommentInReplyTo.md)
 - [CommentList](docs/CommentList.md)
 - [CommentPost](docs/CommentPost.md)
 - [Page](docs/Page.md)
 - [PageAuthor](docs/PageAuthor.md)
 - [PageBlog](docs/PageBlog.md)
 - [PageList](docs/PageList.md)
 - [Pageviews](docs/Pageviews.md)
 - [PageviewsCountsInner](docs/PageviewsCountsInner.md)
 - [Post](docs/Post.md)
 - [PostAuthor](docs/PostAuthor.md)
 - [PostBlog](docs/PostBlog.md)
 - [PostImagesInner](docs/PostImagesInner.md)
 - [PostList](docs/PostList.md)
 - [PostLocation](docs/PostLocation.md)
 - [PostPerUserInfo](docs/PostPerUserInfo.md)
 - [PostReplies](docs/PostReplies.md)
 - [PostUserInfo](docs/PostUserInfo.md)
 - [PostUserInfosList](docs/PostUserInfosList.md)
 - [User](docs/User.md)
 - [UserBlogs](docs/UserBlogs.md)
 - [UserLocale](docs/UserLocale.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/blogger: Manage your Blogger account
  - https://www.googleapis.com/auth/blogger.readonly: View your Blogger account

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/blogger: Manage your Blogger account
  - https://www.googleapis.com/auth/blogger.readonly: View your Blogger account


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



